bump default font size, adjust list padding/margin to avoid overlaps

--- a/src/scss/_equipment.scss
+++ b/src/scss/_equipment.scss
@@ -33,7 +33,8 @@
   li {
     list-style: none;
     margin-bottom: 0.5rem;
-    padding-left: 1rem;
+    margin-left: 1.5rem;
+    padding-left: 0;
   }
 }
 
@@ -66,7 +67,7 @@
     }
     li {
       list-style: disc;
-      flex: 1 0 50%;
+      flex: 1 0 45%;
       padding-left: 0;
     }
   }
