--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -69,8 +69,9 @@ header {
 
   a {
     display: block;
-    padding: $basePadding;
-    font-size: 1.15rem;
+    padding: 0.6rem;
+    padding-left: 1rem;
+    font-size: 1rem;
     text-transform: uppercase;
     text-decoration: none;
     color: white;
