--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:900|Nunito+Sans:400');
 
 html {
-  font-size: 100%;
+  font-size: 125%;
 } /*16px*/
 
 body {
